RESOLVED FIXED195860
Fix WPE and GTK Debug builds after r243049
https://bugs.webkit.org/show_bug.cgi?id=195860
Summary Fix WPE and GTK Debug builds after r243049
Diego Pino
Reported 2019-03-17 04:26:21 PDT
Fix WPE and GTK Debug builds after r243049
Attachments
Patch (1.28 KB, patch)
2019-03-17 04:27 PDT, Diego Pino
no flags
Diego Pino
Comment 1 2019-03-17 04:27:53 PDT
WebKit Commit Bot
Comment 2 2019-03-17 05:06:54 PDT
Comment on attachment 364962 [details] Patch Clearing flags on attachment: 364962 Committed r243052: <https://trac.webkit.org/changeset/243052>
WebKit Commit Bot
Comment 3 2019-03-17 05:06:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-03-17 05:08:57 PDT
Mark Lam
Comment 5 2019-03-17 18:05:38 PDT
Comment on attachment 364962 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=364962&action=review > Source/JavaScriptCore/runtime/StringPrototype.cpp:1822 > + default: > + ASSERT_NOT_REACHED(); How can this be possibly be correct? Normalization form is an enum class with only the above four values. Can you please provide details on what the WPE and GTK Debug builds errors are? This patch would have be r-ed under normal circumstances.
Note You need to log in before you can comment on or make changes to this bug.