Fix WPE and GTK Debug builds after r243049 https://bugs.webkit.org/show_bug.cgi?id=195860

Unreviewed, build fix after r243049.


* runtime/StringPrototype.cpp:
(JSC::normalizationAffects8Bit):


Canonical link: https://commits.webkit.org/210135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243052 268f45cc-cd09-0410-ab3c-d52691b4dbfc